overlays/prod/deployment-nest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-nest-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-nest-app
  template:
    metadata:
      labels:
        app: mi-nest-app
    spec:
      containers:
        - name: mi-nest-app
          image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab/ai-agents-manager/admin-api:latest
          ports:
            - containerPort: 3001
