overlays/prod/deployment-react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-react-app
  template:
    metadata:
      labels:
        app: mi-react-app
    spec:
      containers:
        - name: mi-react-app
          image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab/ai-agents-manager/front-end
          ports:
            - containerPort: 3005
