overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-nest-app
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: mi-nest-app
          image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab/ai-agents-manager/admin-api:latest
