overlays/prod/patch-image-pull-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-nest-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ecr-secret
