overlays/prod/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-nest-app-ingress
spec:
  rules:
    - host: app.mind-lab.ai
